--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -35,4 +35,12 @@
   @include valo;
 
   // Insert your own theme rules here
+  .my-theme-body{
+  	background-color: #A0B8DE !important;
+  }
+ 
+ .dropdown{
+ 	font-weight: bold !important;
+ }
+ 	
 }
