--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -39,8 +39,11 @@
   	background-color: #A0B8DE !important;
   }
  
- .dropdown{
+ .bold{
  	font-weight: bold !important;
+ }
+ .red{
+	color: red; 
  }
  	
 }
