--- a/.vaadin-designer2/designer-theme.css
+++ b/.vaadin-designer2/designer-theme.css
@@ -12506,6 +12506,10 @@ div.v-layout.v-horizontal.v-widget {
 	background-color: #A0B8DE !important;
 }
 
-.mytheme .dropdown {
+.mytheme .bold {
 	font-weight: bold !important;
+}
+
+.mytheme .red {
+	color: red;
 }
